syntax = "proto3";

option csharp_namespace = "Admin.Web.Protos";

package category;

// Импортируем протокол для использования пустого ответа
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";


service Categories {
    rpc UpdateCategory(CategoryDTOs) returns (google.protobuf.Empty);
    rpc GetCategory(google.protobuf.Empty) returns (CategoryList);
    rpc DeleteCategory(CategoryDTOs) returns(google.protobuf.Empty);
    rpc AddCategory(CategoryDTOs) returns(google.protobuf.Empty);
}


message CategoryDTOs {
    int32 CategoryId = 1;
    string Name = 2;
    string Description = 3;
    string ImageUrl = 4;
}

message CategoryList {
    repeated CategoryDTOs categories = 1;  
}
